--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # MongoDB Connection String
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/monster-battle?retryWrites=true&w=majority
+
+# JWT Secret (use a strong random string in production)
+JWT_SECRET=your-secret-key-change-this-in-production
