--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "jose": "^6.1.0",
     "mongodb": "^6.20.0",
     "next": "16.0.0",
     "react": "19.2.0",
