--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@bsv/sdk": "^1.8.8",
     "jose": "^6.1.0",
     "mongodb": "^6.20.0",
     "next": "16.0.0",
