Moved all NFT minting to server backend for security and provable on-chain link

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/monster-battle?r
 
 # JWT Secret (use a strong random string in production)
 JWT_SECRET=your-secret-key-change-this-in-production
+
+# Server Wallet Configuration (for server-side item minting)
+# Generate a new private key for production - this wallet is the single source of truth for all game items
+SERVER_WALLET_PRIVATE_KEY=your-private-key-hex-here
+SERVER_WALLET_STORAGE_URL=https://store-us-1.bsvb.tech
+SERVER_WALLET_CHAIN=test
