--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@bsv/sdk": "^1.8.8",
+    "@bsv/wallet-helper": "^0.0.3",
     "@bsv/wallet-toolbox-client": "^1.7.14",
     "jose": "^6.1.0",
     "mongodb": "^6.20.0",
